--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2022-08-08" />
 
-<title>James Bond</title>
+<title>WHAT MAKES A GREAT JAMES BOND MOVIE?</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -370,7 +370,7 @@ pre code {
 
 
 
-<h1 class="title toc-ignore">James Bond</h1>
+<h1 class="title toc-ignore">WHAT MAKES A GREAT JAMES BOND MOVIE?</h1>
 <h4 class="author">Kacper Dobek</h4>
 <h4 class="date">2022-08-08</h4>
 
